@@ -6,6 +6,12 @@ Source: https://software.tuxed.net/vpn-ca/
 Files: *
 Copyright: 2019 François Kooman <fkooman@tuxed.net>
 License: MIT
+
+Files: debian/*
+Copyright: 2019 Joost van Baal-Ilić <joostvb-eduvpn@ad1810.com>
+License: MIT
+
+License: MIT
  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the "Software"), to deal
  in the Software without restriction, including without limitation the rights
@@ -23,7 +29,3 @@ License: MIT
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  SOFTWARE.
-
-Files: debian/*
-Copyright: 2019 Joost van Baal-Ilić <joostvb-eduvpn@ad1810.com>
-License: MIT
