@@ -7,5 +7,14 @@
 %:
 	dh $@ --buildsystem=makefile --with=golang
 
+
+# fails with ".debug_info section not present"
+override_dh_dwz:
+	:
+
+# needs DH_GOPKG
+override_dh_golang:
+	:
+
 # dh $@ --builddirectory=_build --buildsystem=golang --with=golang
 
